politics site done

--- a/politics.html
+++ b/politics.html
@@ -9,38 +9,130 @@
 </head>
 
 <body>
-  <header>
-    <div class="header-content-wrapper">
-      <h1 class="page-title">World Magazine</h1>
-      <nav class="top-nav-container">
-        <ul>
-          <li><a>Search</a></li>
-          <li><a>Log In</a></li>
-          <li><a>Magazine</a></li>
-          <li><a>Newsletter</a></li>
-          <li><a>About Us</a></li>
-        </ul>
-      </nav>
-      <nav class="bottom-nav-container">
-        <ul>
-          <li><a href="/index.html">HOME</a></li>
-          <li><a href="/sports.html">SPORTS</a></li>
-          <li><a href="/culture.html">CULTURE</a></li>
-          <li><a href="/politics.html">POLITICS</a></li>
-          <li><a href="/tech.html">TECH</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  <div class="entire-page-wrapper">
+    <header>
+      <div class="header-content-wrapper">
+        <h1 class="page-title">World Magazine</h1>
+        <nav class="top-nav-container">
+          <ul>
+            <li><a>Search</a></li>
+            <li><a>Log In</a></li>
+            <li><a>Magazine</a></li>
+            <li><a>Newsletter</a></li>
+            <li><a>About Us</a></li>
+          </ul>
+        </nav>
+        <nav class="bottom-nav-container">
+          <ul>
+            <li><a href="/index.html">HOME</a></li>
+            <li><a href="/sports.html">SPORTS</a></li>
+            <li><a href="/culture.html">CULTURE</a></li>
+            <li><a href="/politics.html">POLITICS</a></li>
+            <li><a href="/tech.html">TECH</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-  <footer>
-    <div class="footer-content-wrapper">
-      <img src="/socialmediaicons/Xicon.png" alt="Xicon">
-      <h1 class="footer-title">World Magazine</h1>
-      <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+    <main>
+      <div class="site-wrapper">
+        <div class="main-content-wrapper">
 
-    </div>
-  </footer>
+          <div class="main-story-content">
+            <div class="text-story">
+              <a class="site-navigator-anchor" href="individualstories/ukrainestory.html">
+                <h2 class="story-title">
+                  Ukraine keeps getting attacked, Especially in the eastern
+                  region.
+                </h2>
+                <span class="story-info">
+                  Late last night eastern parts of Ukraine got shelled
+                  continously for several hours. "Every day is a struggle, we
+                  need more weapons ammo and supplies" -- Zelensky
+                </span>
+              </a>
+              <div class="author-catagory-info">
+                <span class="catagory-info">
+                  <li><a href="/politics.html">Politics</a></li>
+                </span>
+                <span class="story-author">By: Mark Test</span>
+              </div>
+            </div>
+            <figure class="story-picture">
+              <img src="pictures/putin.jpg" alt="Vladimir Putin" />
+              <figcaption class="story-caption">
+                Vladimir Putin
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="main-story-content">
+            <div class="text-story">
+              <a class="site-navigator-anchor" href="individualstories/nicaraguastory.html">
+                <h2 class="story-title">
+                  Suspicion of election fraud in Nicaragua
+                </h2>
+                <span class="story-info">
+                  Potentially the biggest political scandal in the history of
+                  Nicaragua. <br> The Nicaraguan people have taken to the streets to
+                  protest. "It's time for Nicaragua to become the free democracy
+                  its people desire" -- Angry protester
+                </span>
+              </a>
+              <div class="author-catagory-info">
+                <span class="catagory-info">
+                  <li><a href="/politics.html">Politics</a></li>
+                </span>
+                <span class="story-author">By: Mark Test</span>
+              </div>
+            </div>
+            <figure class="story-picture">
+              <img src="/pictures/nicaragua.jpg" alt="Nicaragua president">
+              <figcaption class="story-caption">
+                Daniel Ortega
+              </figcaption>
+            </figure>
+          </div>
+
+          <div class="main-story-content">
+            <div class="text-story">
+              <a class="site-navigator-anchor" href="individualstories/canadastory.html">
+                <h2 class="story-title">
+                  A Close Race: Canada's Electrifying Election
+                </h2>
+                <span class="story-info">
+                  It was an edge-of-the-seat contest, a thrilling duel of ideologies and visions that held the citizens
+                  in rapt attention. The atmosphere was electric
+                </span>
+              </a>
+              <div class="author-catagory-info">
+                <span class="catagory-info">
+                  <li><a href="/politics.html">Politics</a></li>
+                </span>
+                <span class="story-author">By: Mark Test</span>
+              </div>
+            </div>
+            <figure class="story-picture">
+              <img src="pictures/canada.jpg" alt="">
+              <figcaption class="story-caption">
+                Canadian Election
+              </figcaption>
+            </figure>
+          </div>
+
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="footer-content-wrapper">
+        <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+        <h1 class="footer-title">World Magazine</h1>
+        <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
