Tech site and indiv pages done

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <!--MAIN CONTENT-->
         <div class="main-content-wrapper">
 
-          <div class="main-story-content first-story">
+          <section class="main-story-content first-story">
             <div class="text-story">
               <a class="site-navigator-anchor" href="individualstories/ukrainestory.html">
                 <h2 class="story-title">
@@ -64,9 +64,9 @@
               <img src="pictures/putin.jpg" alt="putin" />
               <figcaption class="story-caption">Vladimir Putin</figcaption>
             </figure>
-          </div>
+          </section>
 
-          <div class="main-story-content second-story">
+          <section class="main-story-content second-story">
             <div class="text-story">
               <a class="site-navigator-anchor" href="individualstories/nicaraguastory.html">
                 <h2 class="story-title">
@@ -90,9 +90,9 @@
               <img src="pictures/nicaragua.jpg" alt="Nicaragua president" />
               <figcaption class="story-caption">Daniel Ortega</figcaption>
             </figure>
-          </div>
+          </section>
 
-          <div class="main-story-content third-story">
+          <section class="main-story-content third-story">
             <div class="text-story">
               <a class="site-navigator-anchor" href="individualstories/soccerstory.html">
                 <h2 class="story-title">
@@ -115,9 +115,9 @@
                 Spain National Team
               </figcaption>
             </figure>
-          </div>
+          </section>
 
-          <div class="main-story-content fourth-story">
+          <section class="main-story-content fourth-story">
             <div class="text-story">
               <a class="site-navigator-anchor" href="/individualstories/applestory.html">
                 <h2 class="story-title">Apples reveals their new VR-headset</h2>
@@ -141,9 +141,9 @@
               <img src="pictures/apple.jpg" alt="apple">
               <figcaption class="story-caption">Apples new VR-headset</figcaption>
             </figure>
-          </div>
+          </section>
 
-          <div class="main-story-content fifth-story">
+          <section class="main-story-content fifth-story">
             <div class="text-story">
               <a class="site-navigator-anchor" href="individualstories/museumstory.html">
                 <h2 class="story-title">Record number of people visited the National history museum</h2>
@@ -165,7 +165,7 @@
               <img src="pictures/museum.jpg" alt="museum">
               <figcaption class="story-caption">American Museum of Natural History</figcaption>
             </figure>
-          </div>
+          </section>
 
         </div>
         <!--MAIN CONTENT-->
@@ -236,7 +236,7 @@
                 <h3 class="breaking-story-title">
                   250.000 people evacuated in Los Angeles
                 </h3>
-                <p class="breaking-time">2 hour ago</p>
+                <p class="breaking-time">2 hours ago</p>
               </div>
               <figure class="breaking-story-picture">
                 <img src="pictures/lafire.jpg" alt="forest fire">
