--- a/individualstories/applestory.html
+++ b/individualstories/applestory.html
@@ -36,7 +36,7 @@
 
         <main>
             <div class="individual-site-wrapper">
-                <div class="individual-story apple-story">
+                <section class="individual-story apple-story">
                     <h2 class="individual-title">Apple's Big Reveal: Tim Cook Unveils the New Apple VR-Headset</h2>
                     <img src="/pictures/apple.jpg" alt="apple">
                     <p class="sub-title-text">
@@ -131,7 +131,7 @@
 
 
 
-                </div>
+                </section>
             </div>
         </main>
 
