--- a/individualstories/canadastory.html
+++ b/individualstories/canadastory.html
@@ -36,7 +36,7 @@
 
         <main>
             <div class="individual-site-wrapper">
-                <div class="individual-story canada-story">
+                <section class="individual-story canada-story">
                     <h2 class="individual-title">
                         A Close Race: Canada's Electrifying Election
                     </h2>
@@ -109,7 +109,7 @@
                         importance of civic participation and the shared responsibility of charting a collective path
                         forward for the nation.
                     </p>
-                </div>
+                </section>
             </div>
 
         </main>
