--- a/individualstories/comicconstory.html
+++ b/individualstories/comicconstory.html
@@ -36,7 +36,7 @@
 
         <main>
             <div class="individual-site-wrapper">
-                <div class="individual-story comiccon-story">
+                <section class="individual-story comiccon-story">
                     <h2 class="individual-title">Comic-Con South Africa Celebrates Homegrown Superheroes: A Culture
                         Festival Extravaganza</h2>
                     <img src="/pictures/comiccon.jpg" alt="Comic Con">
@@ -91,7 +91,7 @@
                         evolve, it promises to play an increasingly significant role in promoting and celebrating the
                         extraordinary world of comics and pop culture.</p>
 
-                </div>
+                </section>
             </div>
         </main>
 
