--- a/individualstories/duplantisstory.html
+++ b/individualstories/duplantisstory.html
@@ -37,7 +37,7 @@
 
         <main>
             <div class="individual-site-wrapper">
-                <div class="individual-story duplantis-story">
+                <section class="individual-story duplantis-story">
                     <h2 class="individual-title">Duplantis jumps higher then ever before</h2>
                     <img src="/pictures/duplantis.jpg" alt="duplantis">
                     <p class="sub-title-text">In a display of extraordinary athleticism and unwavering determination,
@@ -91,7 +91,7 @@
                         of athletes to chase their dreams and aim for unparalleled heights in their respective sports.
                     </p>
 
-                </div>
+                </section>
             </div>
         </main>
 
