--- a/individualstories/earthquakestory.html
+++ b/individualstories/earthquakestory.html
@@ -36,7 +36,7 @@
 
         <main>
             <div class="individual-site-wrapper">
-                <div class="individual-story earthquake-story">
+                <section class="individual-story earthquake-story">
                     <h2 class="individual-title">More than 100 killed in Mexico earthquake</h2>
                     <img src="/pictures/mexicoearthquake.jpg" alt="earthquake">
                     <p class="sub-title-text">A Devastating Natural Disaster Shakes Mexico, Leaving a Trail of
@@ -87,7 +87,7 @@
                         global community. In this dark hour, the compassion, support, and determination of all will pave
                         the way towards healing and recovery for Mexico.</p>
 
-                </div>
+                </section>
             </div>
         </main>
 
