--- a/individualstories/golfstory.html
+++ b/individualstories/golfstory.html
@@ -37,7 +37,7 @@
 
         <main>
             <div class="individual-site-wrapper">
-                <div class="individual-story golf-story">
+                <section class="individual-story golf-story">
                     <h2 class="individual-title">Swedish Golfer Ludvig Åberg Wins the DP World Tour Competition in
                         France</h2>
                     <img src="/pictures/ludvigåberg.jpg" alt="Ludvig Åberg">
@@ -89,7 +89,7 @@
                         golfing world, Ludvig Åberg is sure to inspire aspiring golfers and carve his name among the
                         legends of the game.</p>
 
-                </div>
+                </section>
             </div>
         </main>
 
