--- a/individualstories/lafirestory.html
+++ b/individualstories/lafirestory.html
@@ -36,7 +36,7 @@
 
         <main>
             <div class="individual-site-wrapper">
-                <div class="individual-story lafire-story">
+                <section class="individual-story lafire-story">
                     <h2 class="individual-title">250.000 People Evacuated In Los Angeles</h2>
                     <img src="/pictures/lafire.jpg" alt="lafire">
                     <p class="sub-title-text">A Dire Crisis Unfolds: Massive Evacuations and Intense Efforts to Combat
@@ -87,7 +87,7 @@
                         crucial for everyone to come together, support one another, and work towards recovery and
                         restoration in the days to come.</p>
 
-                </div>
+                </section>
             </div>
         </main>
 
