--- a/individualstories/museumstory.html
+++ b/individualstories/museumstory.html
@@ -38,7 +38,7 @@
 
         <main>
             <div class="individual-site-wrapper">
-                <div class="individual-story museum-story">
+                <section class="individual-story museum-story">
                     <h2 class="individual-title">Record Number of People Visited the National History Museum</h2>
                     <img src="/pictures/museum.jpg" alt="museum">
                     <p class="sub-title-text">This year the American Museum of Natural History has seen an increase in
@@ -95,7 +95,7 @@
                         museum remains committed to navigating financial challenges and ensuring its ability to continue
                         serving as a beacon of knowledge and inspiration for generations to come.</p>
 
-                </div>
+                </section>
             </div>
         </main>
 
