--- a/individualstories/nasamarsstory.html
+++ b/individualstories/nasamarsstory.html
@@ -36,7 +36,7 @@
 
         <main>
             <div class="individual-site-wrapper">
-                <div class="individual-story nasa-story">
+                <section class="individual-story nasa-story">
                     <h2 class="individual-title">Major Discovery by NASA on Mars</h2>
                     <img src="/pictures/Perseverence.jpg" alt="Perseverence">
                     <p class="sub-title-text">Unlocking the Secrets of the Red Planet: A New Milestone for NASA. Delving
@@ -111,7 +111,7 @@
                         may call Mars a second home.
                     </p>
 
-                </div>
+                </section>
             </div>
         </main>
         <footer>
