--- a/individualstories/nicaraguastory.html
+++ b/individualstories/nicaraguastory.html
@@ -36,7 +36,7 @@
 
         <main>
             <div class="individual-site-wrapper">
-                <div class="individual-story nicaragua-story">
+                <section class="individual-story nicaragua-story">
                     <h2 class="individual-title">Potentially the Biggest Political Scandal in the History of Nicaragua
                     </h2>
                     <img src="/pictures/nicaragua.jpg" alt="nicaragua">
@@ -91,7 +91,7 @@
                         a free and democratic society.</p>
 
 
-                </div>
+                </section>
             </div>
         </main>
 
