--- a/individualstories/royalalbertstory.html
+++ b/individualstories/royalalbertstory.html
@@ -39,7 +39,7 @@
         <main>
 
             <div class="individual-site-wrapper">
-                <div class="individual-story royalalberthall-story">
+                <section class="individual-story royalalberthall-story">
                     <h2 class="individual-title">
                         Royal Albert Hall Embarks on Transformation
                     </h2>
@@ -94,7 +94,7 @@
                         it is poised to redefine the Royal Albert Hall's place in the world of arts and culture,
                         ensuring its legacy as a beacon of artistic excellence endures for generations to come.</p>
 
-                </div>
+                </section>
             </div>
 
         </main>
