--- a/individualstories/sailingstory.html
+++ b/individualstories/sailingstory.html
@@ -36,7 +36,7 @@
 
         <main>
             <div class="individual-site-wrapper">
-                <div class="individual-story sailing-story">
+                <section class="individual-story sailing-story">
                     <h2 class="individual-title">Team USA Wins the Biggest Sailing Competition in the World</h2>
                     <img src="/pictures/sailing.jpg" alt="sailing">
                     <p class="sub-title-text">A Triumph on the High Seas: Team USA Conquers the Pinnacle of Sailing
@@ -90,7 +90,7 @@
                         beacon of sailing achievement, and their achievement will be celebrated for generations to come.
                     </p>
 
-                </div>
+                </section>
             </div>
         </main>
 
