--- a/individualstories/soccerstory.html
+++ b/individualstories/soccerstory.html
@@ -36,7 +36,7 @@
 
         <main>
             <div class="individual-site-wrapper">
-                <div class="individual-story soccer-story">
+                <section class="individual-story soccer-story">
                     <h2 class="individual-title">Spain Emerges Victorious: Defeats England 1-0 in Women's World Cup
                         Finals</h2>
                     <img src="/pictures/spainteam.jpg" alt="spainteam">
@@ -89,7 +89,7 @@
                     </p>
 
 
-                </div>
+                </section>
             </div>
         </main>
 
