--- a/individualstories/trumpfraudstory.html
+++ b/individualstories/trumpfraudstory.html
@@ -37,7 +37,7 @@
 
         <main>
             <div class="individual-site-wrapper">
-                <div class="individual-story trump-story">
+                <section class="individual-story trump-story">
                     <h2 class="individual-title">Trump Charged with 19 Counts of Fraud</h2>
                     <img src="/pictures/trump.jpg" alt="apple">
                     <p class="sub-title-text">
@@ -102,7 +102,7 @@
 
 
 
-                </div>
+                </section>
             </div>
         </main>
 
