--- a/individualstories/ukrainestory.html
+++ b/individualstories/ukrainestory.html
@@ -36,7 +36,7 @@
 
         <main>
             <div class="individual-site-wrapper">
-                <div class="individual-story ukraine-story">
+                <section class="individual-story ukraine-story">
                     <h2 class="individual-title">Late Last Night: Eastern Ukraine Under Relentless Shelling</h2>
                     <img src="/pictures/putin.jpg" alt="putin">
                     <p class="sub-title-text">Late last night eastern parts of Ukraine got shelled
@@ -100,7 +100,7 @@
                     <h3 class="article-title"></h3>
                     <p class="article-text"></p>
 
-                </div>
+                </section>
             </div>
         </main>
 
