--- a/politics.html
+++ b/politics.html
@@ -38,7 +38,7 @@
       <div class="site-wrapper">
         <div class="main-content-wrapper">
 
-          <div class="main-story-content">
+          <section class="main-story-content">
             <div class="text-story">
               <a class="site-navigator-anchor" href="individualstories/ukrainestory.html">
                 <h2 class="story-title">
@@ -64,9 +64,9 @@
                 Vladimir Putin
               </figcaption>
             </figure>
-          </div>
+          </section>
 
-          <div class="main-story-content">
+          <section class="main-story-content">
             <div class="text-story">
               <a class="site-navigator-anchor" href="individualstories/nicaraguastory.html">
                 <h2 class="story-title">
@@ -92,9 +92,9 @@
                 Daniel Ortega
               </figcaption>
             </figure>
-          </div>
+          </section>
 
-          <div class="main-story-content">
+          <section class="main-story-content">
             <div class="text-story">
               <a class="site-navigator-anchor" href="individualstories/canadastory.html">
                 <h2 class="story-title">
@@ -118,7 +118,7 @@
                 Canadian Election
               </figcaption>
             </figure>
-          </div>
+          </section>
 
         </div>
       </div>
