--- a/sports.html
+++ b/sports.html
@@ -38,7 +38,7 @@
       <div class="site-wrapper">
         <div class="main-content-wrapper">
 
-          <div class="main-story-content">
+          <section class="main-story-content">
             <div class="text-story">
               <a class="site-navigator-anchor" href="individualstories/soccerstory.html">
                 <h2 class="story-title">
@@ -61,9 +61,9 @@
                 Spain National Team
               </figcaption>
             </figure>
-          </div>
+          </section>
 
-          <div class="main-story-content">
+          <section class="main-story-content">
             <div class="text-story">
               <a class="site-navigator-anchor" href="/individualstories/sailingstory.html">
                 <h2 class="story-title">
@@ -88,9 +88,9 @@
                 USA sailing
               </figcaption>
             </figure>
-          </div>
+          </section>
 
-          <div class="main-story-content">
+          <section class="main-story-content">
             <div class="text-story">
               <a class="site-navigator-anchor" href="/individualstories/golfstory.html">
                 <h2 class="story-title">
@@ -115,7 +115,7 @@
                 Ludvig Åberg
               </figcaption>
             </figure>
-          </div>
+          </section>
 
         </div>
       </div>
