--- a/tech.html
+++ b/tech.html
@@ -9,38 +9,127 @@
 </head>
 
 <body>
-  <header>
-    <div class="header-content-wrapper">
-      <h1 class="page-title">World Magazine</h1>
-      <nav class="top-nav-container">
-        <ul>
-          <li><a>Search</a></li>
-          <li><a>Log In</a></li>
-          <li><a>Magazine</a></li>
-          <li><a>Newsletter</a></li>
-          <li><a>About Us</a></li>
-        </ul>
-      </nav>
-      <nav class="bottom-nav-container">
-        <ul>
-          <li><a href="/index.html">HOME</a></li>
-          <li><a href="/sports.html">SPORTS</a></li>
-          <li><a href="/culture.html">CULTURE</a></li>
-          <li><a href="/politics.html">POLITICS</a></li>
-          <li><a href="/tech.html">TECH</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+  <div class="entire-page-wrapper">
+    <header>
+      <div class="header-content-wrapper">
+        <h1 class="page-title">World Magazine</h1>
+        <nav class="top-nav-container">
+          <ul>
+            <li><a>Search</a></li>
+            <li><a>Log In</a></li>
+            <li><a>Magazine</a></li>
+            <li><a>Newsletter</a></li>
+            <li><a>About Us</a></li>
+          </ul>
+        </nav>
+        <nav class="bottom-nav-container">
+          <ul>
+            <li><a href="/index.html">HOME</a></li>
+            <li><a href="/sports.html">SPORTS</a></li>
+            <li><a href="/culture.html">CULTURE</a></li>
+            <li><a href="/politics.html">POLITICS</a></li>
+            <li><a href="/tech.html">TECH</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
 
-  <footer>
-    <div class="footer-content-wrapper">
-      <img src="/socialmediaicons/Xicon.png" alt="Xicon">
-      <h1 class="footer-title">World Magazine</h1>
-      <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+    <main>
+      <div class="site-wrapper">
+        <div class="main-content-wrapper">
 
-    </div>
-  </footer>
+          <section class="main-story-content">
+            <div class="text-story">
+              <a class="site-navigator-anchor" href="/individualstories/applestory.html">
+                <h2 class="story-title">
+                  Apples reveals their new VR-headset
+                </h2>
+                <span class="story-info">
+                  After years of speculation and delays, Apples Tim Cook has unveiled the new Apple VR-headset. <br>
+                  But one question remains, are customers still willing to pay premium prices for Apple products? <br>
+                  "It took longer then we expected but we are confident our customers will be more than satisfied with
+                  the
+                  product"
+                  -- Tim Cook.
+                </span>
+              </a>
+              <div class="author-catagory-info">
+                <span class="catagory-info">
+                  <li><a href="/tech.html">Tech</a></li>
+                </span>
+                <span class="story-author">By: Mark Test</span>
+              </div>
+            </div>
+            <figure class="story-picture">
+              <img src="/pictures/apple.jpg" alt="apple">
+              <figcaption class="story-caption">Apples new VR-headset</figcaption>
+            </figure>
+          </section>
+
+          <section class="main-story-content">
+            <div class="text-story">
+              <a class="site-navigator-anchor" href="/individualstories/starlinkstory.html">
+                <h2 class="story-title">
+                  Starlink: Illuminating the Cosmos
+                </h2>
+                <span class="story-info">
+                  A stellar revolution: pioneering connectivity in an ever-expanding universe. Starlink's ambitious
+                  satellite network and its global impact on bridging the digital divide, empowering rural communities,
+                  and enabling technological advancements for a more connected and inclusive world.
+                </span>
+              </a>
+              <div class="author-catagory-info">
+                <span class="catagory-info">
+                  <li><a href="/tech.html">Tech</a></li>
+                </span>
+                <span class="story-author">By: Mark Test</span>
+              </div>
+            </div>
+            <figure class="story-picture">
+              <img src="/pictures/starlink.jpg" alt="starlink">
+              <figcaption class="story-caption">Starlink</figcaption>
+            </figure>
+          </section>
+
+          <section class="main-story-content">
+            <div class="text-story">
+              <a class="site-navigator-anchor" href="/individualstories/xstory.html">
+                <h2 class="story-title">
+                  X shows record breaking numbers.
+                </h2>
+                <span class="story-info">
+                  From evolution to revolution: exploring X's transformation under Elon Musk's visionary leadership.
+                  Discover how this shift catalyzed a new era in social media, introducing innovative features and
+                  enhancing user experience, ultimately redefining the future of digital interaction.
+                </span>
+              </a>
+              <div class="author-catagory-info">
+                <span class="catagory-info">
+                  <li><a href="/tech.html">Tech</a></li>
+                </span>
+                <span class="story-author">By: Mark Test</span>
+              </div>
+            </div>
+            <figure class="story-picture">
+              <img src="/pictures/xtwitter.jpg" alt="xtwitter">
+              <figcaption class="story-caption">X.com (Twitter.com)</figcaption>
+            </figure>
+          </section>
+
+
+        </div>
+      </div>
+    </main>
+
+    <footer>
+      <div class="footer-content-wrapper">
+        <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+        <h1 class="footer-title">World Magazine</h1>
+        <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+
+      </div>
+    </footer>
+  </div>
 </body>
 
 </html>
