--- a/culture.html
+++ b/culture.html
@@ -38,7 +38,7 @@
       <div class="site-wrapper">
         <div class="main-content-wrapper">
 
-          <div class="main-story-content">
+          <section class="main-story-content">
             <div class="text-story">
               <a class="site-navigator-anchor" href="individualstories/museumstory.html">
                 <h2 class="story-title">Record number of people visited the National history museum</h2>
@@ -60,9 +60,9 @@
               <img src="pictures/museum.jpg" alt="museum">
               <figcaption class="story-caption">American Museum of Natural History</figcaption>
             </figure>
-          </div>
+          </section>
 
-          <div class="main-story-content">
+          <section class="main-story-content">
             <div class="text-story">
               <a class="site-navigator-anchor" href="individualstories/comicconstory.html">
                 <h2 class="story-title">Comic-Con South Africa: Top culture festival showcases homegrown superheroes
@@ -85,9 +85,9 @@
                 Comic Con in South Africa
               </figcaption>
             </figure>
-          </div>
+          </section>
 
-          <div class="main-story-content">
+          <section class="main-story-content">
             <div class="text-story">
               <a class="site-navigator-anchor" href="individualstories/royalalbertstory.html">
                 <h2 class="story-title">
@@ -113,7 +113,7 @@
                 Royal Albert Hall
               </figcaption>
             </figure>
-          </div>
+          </section>
 
         </div>
       </div>
