--- a/tech.html
+++ b/tech.html
@@ -123,10 +123,13 @@
 
     <footer>
       <div class="footer-content-wrapper">
-        <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+        <a href="https://www.x.com">
+          <img src="/socialmediaicons/Xicon.png" alt="Xicon">
+        </a>
         <h1 class="footer-title">World Magazine</h1>
-        <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
-
+        <a href="https://www.facebook.com">
+          <img src="/socialmediaicons/Facebooklicon.png" alt="Facebooklicon">
+        </a>
       </div>
     </footer>
   </div>
